<resources>
    <string name="app_name">Tour Now</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>

    <string name="signuphere">Creat a new account <u>SignUp</u></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="signup">Signup</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="c_password">Confirm Password</string>
    <string name="loginhere">Already have an account? <u>Login</u></string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="forgotpasswordreset">Enter email</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">Enter new password</string>
    <string name="c_new_password">Confirm new password</string>
    <string name="settings">Settings</string>
    <string name="your_profile">Your Profile</string>
    <string name="logout">Log Out</string>

    <string name="nav_title">Tour Now</string>
    <string name="write_post_title"> Create your post</string>
    <string name="re_write_post_title"> Image added</string>
    <string name="discard_post">Discard</string>
    <string name="publish_post">Publish</string>
    <string name="comment_post">Comment</string>
    <string name="all_comments">Comments</string>
    <string name="type_comment">Type a comment</string>
    <string name="budget_calculator">Budget Calculator</string>

    <string name="text_name_old"> Enter previous username</string>
    <string name="text_name_new"> Enter new username</string>
    <string name="text_no">No</string>
    <string name="text_reset">Reset</string>
    <string name="text_email_old"> Enter previous email</string>
    <string name="text_email_new"> Enter new email</string>
    <string name="text_setting">App Language</string>
    <string name="text_dark">Default Mode</string>
    <string name="text_light">Light Mode</string>
    <string name="text_english">English</string>
    <string name="text_bangla">বাংলা</string>
    <string name="lang_change">\u0020Change Language</string>

    <string name="menu_home">Home</string>
    <string name="menu_travel">Travel Places</string>
    <string name="menu_travel_division">Divisions</string>
    <string name="menu_travel_buking">Hotel/Ticket Booking</string>
    <string name="menu_offline_data">Offline Info</string>
    <string name="menu_travel_blog">Travel Blog</string>
    <string name="menu_travel_advice">Travel Advice</string>
    <string name="menu_travel_share">Share This App</string>
    <string name="menu_travel_setting">Settings</string>
    <string name="menu_budget_calculate">Budget Calculation</string>
    <string name="menu_newsfeed">Newsfeed</string>
    <string name="menu_about">About</string>
    <string name="calculate_btn">Calculate</string>
    <string name="total_person"> Total Person</string>
    <string name="division_text"> Division</string>
    <string name="place_text"> Place</string>
    <string name="transport_text"> Transport</string>
    <string name="hotel_text"> Hotel</string>
    <string name="total_days"> Total Days</string>
    <string name="enter_place"> Search place by district</string>
    <string name="search_place"> Search</string>

    <string-array name="name_email_array">
        <item>Settings</item>
        <item>Username</item>
        <item>Email</item>
    </string-array>

    <string-array name="division_array">
        <item>Division</item>
        <item>Dhaka</item>
        <item>Chittagong</item>
        <item>Khulna</item>
        <item>Barisal</item>
        <item>Rajshahi</item>
        <item>Sylhet</item>
        <item>Rangpur</item>
        <item>Mymensingh</item>
    </string-array>

    <string-array name="places_array">
        <item>District</item>
        <item>Chittagong</item>
        <item>Dhaka</item>
        <item>Rajshahi</item>
        <item>Sylhet</item>
        <item>Jessore</item>
        <item>Dinajpur</item>
        <item>Mymensingh</item>
        <item>Comilla</item>
        <item>Barisal</item>
        <item>Faridpur</item>
        <item>Bogra</item>
        <item>Pabna</item>
        <item>Rangamati</item>
        <item>Kushtia</item>
        <item>Rangpur</item>
        <item>Noakhali</item>
        <item>Khulna</item>
        <item>Tangail</item>
        <item>Panchagarh</item>
        <item>Bhola</item>
        <item>Bandarban</item>
        <item>Chandpur</item>
        <item>Habiganj</item>
        <item>Lakshmipur</item>
        <item>Barguna</item>
        <item>Jhalokati</item>
        <item>Pirojpur</item>
        <item>Patuakhali</item>
        <item>Jhenaidah</item>
        <item>Narail</item>
        <item>Magura</item>
        <item>Lalmonirhat</item>
        <item>Kurigram</item>
        <item>Nilphamari</item>
        <item>Gaibandha</item>
        <item>Thakurgaon</item>
        <item>Satkhira</item>
        <item>Bagerhat</item>
        <item>Chuadanga</item>
        <item>Meherpur</item>
        <item>Sirajganj</item>
        <item>Joypurhat</item>
        <item>Natore</item>
        <item>Naogaon</item>
        <item>Nawabganj</item>
        <item>Khagrachhari</item>
        <item>Feni</item>
        <item>Brahmanbaria</item>
        <item>Sunamganj</item>
        <item>Coxs Bazar</item>
        <item>Moulvibazar</item>
        <item>Gopalganj</item>
        <item>Shariatpur</item>
        <item>Madaripur</item>
        <item>Rajbari</item>
        <item>Gazipur</item>
        <item>Kishoreganj</item>
        <item>Jamalpur</item>
        <item>Sherpur</item>
        <item>Netrakona</item>
        <item>Munshiganj</item>
        <item>Narsingdi</item>
        <item>Narayanganj</item>
        <item>Manikganj</item>
    </string-array>

    <string-array name="transport_array">
        <item>Transport</item>
        <item>Non AC Bus</item>
        <item>AC Bus</item>
        <item>Train (Local)</item>
        <item>Train (Inter-City AC)</item>
        <item>Train (Inter-City Non AC)</item>
        <item>Launch (Dake)</item>
        <item>Launch (Double Cabin)</item>
        <item>Launch (Single Cabin)</item>
        <item>Airlines (Any)</item>
    </string-array>

    <string-array name="hotel_array">
        <item>Hotel</item>
        <item>5 Star (AC)</item>
        <item>4 Star (AC)</item>
        <item>General (AC)</item>
        <item>General (Non AC)</item>
    </string-array>

    <string name="taka_text"> tk</string>
    <string name="alert_text">* This calculation is an approximate. It may vary on different hotel and transport ticket.</string>

    <string name="travel_binodon">Park</string>
    <string name="travel_bonanchol">Forests</string>
    <string name="travel_pahar">Hill Tracts</string>
    <string name="travel_somudro">River/Sea Beaches</string>
    <string name="travel_oitihasik">Historical Place</string>
    <string name="travel_jadughor">Museum</string>

    <string name="division_dhaka">Dhaka</string>
    <string name="dhaka_division">Dhaka Division</string>
    <string name="kisorgonj">Kishoreganj</string>
    <string name="gajipur">Gazipur</string>
    <string name="gopalgonj">Gopalganj</string>
    <string name="tangail">Tangail</string>
    <string name="dhaka">Dhaka</string>
    <string name="norsingdi">Narsingdi</string>
    <string name="narayongonj">Narayanganj</string>
    <string name="faridpur">Faridpur</string>
    <string name="madaripur">Madaripur</string>
    <string name="manikgonj">Manikganj</string>
    <string name="munsigonj">Munsiganj</string>
    <string name="rajbari">Rajbari</string>
    <string name="soriyotpur">Shariatpur</string>

    <string name="division_chottogram">Chittagong</string>
    <string name="bandarban">Bandarban</string>
    <string name="brahmanbaria">Brahmanbaria</string>
    <string name="chandpur">Chandpur</string>
    <string name="chattogram">Chattogram</string>
    <string name="coxs_Bazar">Cox’s Bazar</string>
    <string name="cumilla">Cumilla</string>
    <string name="feni">Feni</string>
    <string name="khagrachhari">Khagrachhari</string>
    <string name="lakshmipur">Lakshmipur</string>
    <string name="noakhali">Noakhali</string>
    <string name="rangamati">Rangamati</string>

    <string name="division_khulna">Khulna</string>
    <string name="Bagerhat">Bagerhat</string>
    <string name="Chuadanga">Chuadanga</string>
    <string name="Jashore">Jashore</string>
    <string name="Jhenaidah">Jhenaidah</string>
    <string name="Khulna">Khulna</string>
    <string name="Kushtia">Kushtia</string>
    <string name="Magura">Magura</string>
    <string name="Meherpur">Meherpur</string>
    <string name="Narail">Narail</string>
    <string name="Satkhira">Satkhira</string>

    <string name="division_barishal">Barisal</string>
    <string name="barguna">Barguna</string>
    <string name="barishal">Barishal</string>
    <string name="bhola">Bhola</string>
    <string name="jhalokati">Jhalokati</string>
    <string name="patuakhali">Patuakhali</string>
    <string name="pirojpur">Pirojpur</string>

    <string name="division_rajshahi">Rajshahi</string>
    <string name="Bogura">Bogura</string>
    <string name="Joypurhat">Joypurhat</string>
    <string name="Naogaon">Naogaon</string>
    <string name="Natore">Natore</string>
    <string name="Chapainawabganj">Chapainawabganj</string>
    <string name="Pabna">Pabna</string>
    <string name="Rajshahi">Rajshahi</string>
    <string name="Sirajganj">Sirajganj</string>

    <string name="division_sylhet">Sylhet</string>
    <string name="Habiganj">Habiganj</string>
    <string name="Moulvibazar">Moulvibazar</string>
    <string name="Sunamganj">Sunamganj</string>
    <string name="Sylhet">Sylhet</string>

    <string name="division_rangpur">Rangpur</string>
    <string name="Dinajpur">Dinajpur</string>
    <string name="Gaibandha">Gaibandha</string>
    <string name="Kurigram">Kurigram</string>
    <string name="Lalmonirhat">Lalmonirhat</string>
    <string name="Nilphamari">Nilphamari</string>
    <string name="Panchagarh">Panchagarh</string>
    <string name="Rangpur">Rangpur</string>
    <string name="Thakurgaon">Thakurgaon</string>

    <string name="division_mymenshingh">Mymensingh</string>
    <string name="Jamalpur">Jamalpur</string>
    <string name="Mymensingh">Mymensingh</string>
    <string name="Netrokona">Netrokona</string>
    <string name="Sherpur">Sherpur</string>

    <string name="buking_hotel">Book your resort/hotel from home</string>
    <string name="buked_hotel">Choose your hotel here</string>
    <string name="buking_ticket">Buy tickets from home</string>
    <string name="buked_ticket">Buy tickets here</string>

    <string name="hotel">Hotel</string>
    <string name="buking.com">Booking.com</string>
    <string name="hotelbuking">Hotel Booking</string>


    <string name="train">Train</string>
    <string name="bdtrain">Bangladesh Railway</string>
    <string name="bus">Bus</string>
    <string name="bdtikit">Bd Ticket</string>
    <string name="sohoj">Shohoj</string>
    <string name="busbd">Bus Bd</string>
    <string name="launch">Launch</string>
    <string name="biman">Airplane</string>
    <string name="bimanbangladesh">Biman Bangladesh Airlines</string>
    <string name="gozayaan">Go Zayaan</string>
    <string name="flightexpart">Flight Expert</string>

</resources>
