<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#fff">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/upperLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <EditText
            android:id="@+id/enterNewNameID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_name_new"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif"
            android:inputType="text"
            android:layout_gravity="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/upperLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@+id/upperLayout1">

        <EditText
            android:id="@+id/enterOldNameID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_name_old"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif"
            android:inputType="text"
            android:layout_gravity="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/upperLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@+id/upperLayout2">

        <EditText
            android:id="@+id/enterPasswordID1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:layout_gravity="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_below="@+id/upperLayout3">

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/progressBarId1"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resetEmailId1"
            android:text="@string/text_reset"
            android:textColor="@color/colorAccent"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_gravity="center|right"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notChangeId1"
            android:text="@string/text_no"
            android:textColor="#E60F3B"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_gravity="center|left"
            android:textStyle="bold"/>

    </FrameLayout>

</RelativeLayout>
