<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BudgetNewsfeedAbout.NewsfeedFragment"
    android:background="#fff">

    <EditText
        android:id="@+id/writePostEditTextId"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/create_post_background"
        android:gravity="top"
        android:hint="@string/write_post_title"
        android:padding="10dp"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/upperLayoutId1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/writePostEditTextId"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="0dp"
        android:weightSum="10">

        <ImageView
            android:id="@+id/uploadImageId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_attach_image" />

        <ImageView
            android:id="@+id/uploadVideoId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_attach_video" />

        <TextView
            android:id="@+id/discardPostId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="4"
            android:padding="10dp"
            android:text="@string/discard_post"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#F42C2C"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/publishPostId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginLeft="10dp"
            android:layout_weight="4"
            android:padding="10dp"
            android:text="@string/publish_post"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/postProgressBarId"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postRecyclerViewId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/upperLayoutId1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp" />

</RelativeLayout>
